--- a/Views/TeachingAssistant/Evaluation.cshtml
+++ b/Views/TeachingAssistant/Evaluation.cshtml
@@ -20,7 +20,7 @@
             <!-- Page header -->
             <div class="border-bottom pb-3 mb-3 d-md-flex align-items-center justify-content-between">
                 <div class="mb-3 mb-lg-0">
-                    <h1 class="mb-0 h2 fw-bold">Đánh Giá Công Việc</h1>
+                    <h1 class="mb-0 h2 fw-bold">Công Việc Của Tôi</h1>
                     <!-- Breadcrumb -->
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
@@ -82,8 +82,8 @@
                                 <tr>
                                     <th>TT</th>
                                     <th>Mô tả công việc</th>
-                                    <th>K.Lượng</th>
-                                    <th>T.Gian thực hiện</th>
+                                    <th>T.Gian</th>
+                                    <th>T.Gian hoàn thành</th>
                                     <th>Nơi làm việc</th>
                                     <th>Kết quả mong đợi</th>
                                     <th>Trạng thái</th>
