--- a/Views/TeachingAssistant/ListTA.cshtml
+++ b/Views/TeachingAssistant/ListTA.cshtml
@@ -95,8 +95,8 @@
                             <thead class="table-light">
                                 <tr>
                                     <th></th>
-                                    <th>Thông tin SV</th>
-                                    <th>Lớp HP</th>
+                                    <th>Thông tin TA</th>
+                                    <th>LHP đăng ký</th>
                                     <th>Tiến độ CV</th>
                                     <th></th>
                                 </tr>
@@ -155,7 +155,7 @@
         </div>
     </div>
     <div class="modal fade" id="apply" tabindex="-1" role="dialog" aria-labelledby="apply" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="applyTitle">Thông tin trợ giảng 197pm31195 - Huỳnh Văn Quang.</h5>
@@ -300,7 +300,7 @@
     </div>
 
     <div class="modal fade" id="apply2" tabindex="-1" role="dialog" aria-labelledby="apply2" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="apply2Title">Đánh giá công việc trợ giảng 197PM31195 - Huỳnh Văn Quang.</h5>
@@ -325,13 +325,13 @@
                                 <table class="table table-hover">
                                     <thead class="table-light">
                                         <tr>
-                                            <th class="pe-0">TT</th>
-                                            <th class="ps-3">Mô tả công việc</th>
-                                            <th style="max-width: 80px;" class="ps-3">K.Lượng</th>
-                                            <th class="ps-3">T.Gian thực hiện</th>
-                                            <th class="ps-3">Nơi làm việc</th>
-                                            <th class="ps-3">Kết quả mong đợi</th>
-                                            <th class="ps-3 pe-3"></th>
+                                            <th class="pe-0 text-nowrap">TT</th>
+                                            <th class="ps-3 text-nowrap">Mô tả công việc</th>
+                                            <th style="max-width: 80px;" class="ps-3 text-nowrap">T.Gian</th>
+                                            <th class="ps-3 text-nowrap">T.Gian hoàn thành</th>
+                                            <th class="ps-3 text-nowrap">Nơi làm việc</th>
+                                            <th class="ps-3 text-nowrap">Kết quả mong đợi</th>
+                                            <th class="ps-3 pe-3 text-nowrap"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
