--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -140,7 +140,7 @@
     </div>
 
     <div class="modal fade" id="apply" tabindex="-1" role="dialog" aria-labelledby="apply" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="applyTitle">Thông tin đăng ký trợ giảng LHP: 221_71ITBS10103_0101 - Nhập môn công nghệ thông tin.</h5>
