--- a/Views/TeachingAssistant/_TaskListGV.cshtml
+++ b/Views/TeachingAssistant/_TaskListGV.cshtml
@@ -1,27 +1,15 @@
 ﻿<div class="card" id="pageload">
     <div class="card-header">
         <div class="row">
-            <div class="mb-3 col-md-3 col-12">
+            <div class="mb-3 col-md-6 col-12">
                 <label class="form-label">Lớp học phần</label>
                 <select id="hocky" class="form-select" data-width="100%">
                     <option selected value="">---- Chọn lớp học phần ----</option>
                 </select>
             </div>
-            <div class="mb-3 col-md-3 col-12">
-                <label class="form-label">Lọc TA</label>
-                <select id="hocky" class="form-select" data-width="100%">
-                    <option selected value="">Chọn tất cả</option>
-                </select>
-            </div>
-            <div class="mb-3 col-md-3 col-12">
-                <label class="form-label">Lọc công việc</label>
-                <select id="hocky" class="form-select" data-width="100%">
-                    <option selected value="">Chọn tất cả</option>
-                </select>
-            </div>
-            <div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
+            <div class="mb-3 col-md-6 col-12" style="display: flex; flex-direction: row; align-items: end">
                 <div class="w-100 text-end">
-                    <a role="button" data-bs-toggle="modal" data-bs-target="#themcongviecmoi" class="btn btn-primary w-100">
+                    <a role="button" data-bs-toggle="modal" data-bs-target="#themcongviecmoi" class="btn btn-primary ">
                         Thêm công việc
                     </a>
                 </div>
@@ -67,13 +55,9 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
-                                                                <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31195 - Huỳnh Quang" class="fs-6">
-                                                                        Huỳnh Quang
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -105,13 +89,10 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
                                                                 <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31195 - Huỳnh Quang" class="fs-6">
-                                                                        Huỳnh Quang
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -168,13 +149,10 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
                                                                 <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31195 - Huỳnh Quang" class="fs-6">
-                                                                        Huỳnh Quang
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -208,13 +186,10 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
                                                                 <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31194 - Dương Minh Quang" class="fs-6">
-                                                                        Dương Minh Quang
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -248,13 +223,9 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
-                                                                <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31194 - Dương Minh Quang" class="fs-6">
-                                                                        Dương Minh Quang
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -314,13 +285,9 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
-                                                                <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31194 - Nguyễn Mạnh Tài" class="fs-6">
-                                                                        Nguyễn Mạnh Tài
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
@@ -357,13 +324,9 @@
                                                         <div class="d-flex justify-content-between align-items-center ps-sm-1">
                                                             <!-- img -->
                                                             <div class="d-flex align-items-center">
-                                                                <img src="~/Content/img/user-default.png" alt="" class="avatar avatar-xs rounded-circle imgtooltip" />
-                                                                <!-- text -->
-                                                                <div class="ms-2">
-                                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="197pm31194 - Nguyễn Mạnh Tài" class="fs-6">
-                                                                        Nguyễn Mạnh Tài
-                                                                    </span>
-                                                                </div>
+                                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Nhập môn công nghệ thông tin" class="fs-6">
+                                                                    LHP: 221_71ITBS10103_0101
+                                                                </span>
                                                             </div>
                                                             <!-- message count -->
                                                             <div>
