--- a/Views/TeachingAssistant/Advances.cshtml
+++ b/Views/TeachingAssistant/Advances.cshtml
@@ -116,7 +116,6 @@
                                 <tr>
                                     <th class="text-nowrap">Lớp học phần</th>
                                     <th class="text-nowrap">Giảng Viên</th>
-                                    <th class="text-nowrap">Số TC</th>
                                     <th class="text-nowrap">Lịch Học</th>
                                     <th class="text-nowrap">Số tiết</th>
                                     <th class="text-nowrap">Số SV</th>
@@ -147,14 +146,11 @@
                                             <br />
                                             Tên: @item.TenCBGD
                                         </td>
-                                        <td valign="middle">@item.SoTC</td>
                                         <td valign="middle">@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
                                         <td valign="middle">@item.SoTietDaXep</td>
                                         <td valign="middle">0</td>
                                         <td valign="middle" class="text-nowrap">
-                                            <a role="button" class="btn btn-success btn-sm">
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Chọn để đặt trạng thái thành chưa duyệt"><i class="bi bi-check2-square me-2"></i>đã duyệt</span>
-                                            </a>
+                                            <span class="badge bg-success"><i class="bi bi-check2-square me-2"></i>đã duyệt</span>
                                         </td>
                                         <td valign="middle" class="text-nowrap">
                                             <a style="font-size: 20px" data-bs-toggle="modal" data-bs-target="#apply" role="button" @*id="openSua-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID"*@ class="text-primary">
@@ -172,7 +168,7 @@
         </div>
     </div>
     <div class="modal fade" id="apply" tabindex="-1" role="dialog" aria-labelledby="apply" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="applyTitle">Xét duyệt danh sách công việc được giao cho TA.</h5>
@@ -182,6 +178,10 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
+                        <div class="col-12">
+                            <h5>Lớp HP: 221_71ITBS10103_01 - Nhập môn công nghệ thông tin</h5>
+                            <h5>GV: Lê Thị Hồng</h5>
+                        </div>
                         <div class="col-12">
                             <div class="">
                                 <label class="form-label" for="lydo">Lý do đề xuất</label>
@@ -199,12 +199,12 @@
                                 <table class="table table-hover">
                                     <thead class="table-light">
                                         <tr>
-                                            <th class="pe-0">TT</th>
-                                            <th class="ps-3">Mô tả công việc</th>
-                                            <th style="max-width: 100px;" class="ps-3">K.Lượng</th>
-                                            <th class="ps-3">T.Gian thực hiện</th>
-                                            <th class="ps-3">Nơi làm việc</th>
-                                            <th class="ps-3">Kết quả mong đợi</th>
+                                            <th class="pe-0 text-nowrap">TT</th>
+                                            <th class="ps-3 text-nowrap">Mô tả công việc</th>
+                                            <th style="max-width: 100px;" class="ps-3 text-nowrap">T.Gian</th>
+                                            <th class="ps-3 text-nowrap">T.Gian hoàn thành</th>
+                                            <th class="ps-3 text-nowrap">Nơi làm việc</th>
+                                            <th class="ps-3 text-nowrap">Kết quả mong đợi</th>
                                         </tr>
                                     </thead>
                                     <tbody>
