--- a/Views/TeachingAssistant/Apply.cshtml
+++ b/Views/TeachingAssistant/Apply.cshtml
@@ -46,7 +46,7 @@
 </section>
 
 <div class="modal fade" id="apply" tabindex="-1" role="dialog" aria-labelledby="apply" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="applyTitle">Đăng ký trợ giảng LHP: 221_71ITBS10103_0101 - Nhập môn công nghệ thông tin.</h5>
