--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -44,7 +44,7 @@
 
 
     <div class="modal fade" id="themmoi" tabindex="-1" role="dialog" aria-labelledby="themmoi" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="themmoiTitle">Thêm người dùng mới</h5>
@@ -158,7 +158,7 @@
     </div>
     <!-- CẬP NHẬT -->
     <div class="modal fade" id="capnhat" tabindex="-1" role="dialog" aria-labelledby="capnhat" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="capnhatTitle">Cập nhật người dùng</h5>
